--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <button onclick="enterPassword()">Submit</button>
       </div>
   
-      <embed id="embedFrame" src="https://large-type.com/#YOU%20FELL%20FOR%20IT!/" type="text/html">
+      <embed id="embedFrame" src="https://large-type.com/#YOU%20FELL%20FOR%20IT!" type="text/html">
   
       <script>
           function enterPassword() {
